src/gui/kernel/qeventpoint.cpp
@@ -536,6 +536,7 @@ void QMutableEventPoint::update(const QEventPoint &other, QEventPoint &target)
     setEllipseDiameters(target, other.ellipseDiameters());
     setRotation(target, other.rotation());
     setVelocity(target, other.velocity());
+    setUniqueId(target, other.uniqueId()); // for TUIO
 }
 
 /*! \internal
